--- a/src/components/search/search/search.component.html
+++ b/src/components/search/search/search.component.html
@@ -1,4 +1,5 @@
-<div className="text-center p-5">
-<input type="input" placeholder="Enter City" class="border-2 border-blue-400 rounded-md p-1 w-sm" [(ngModel)]="city" (change)="searchCity()"/>
-
+<div className=" p-5 justify-self-center">
+<input type="input" placeholder="Enter City"
+class="border-2 border-blue-400 rounded-md p-1 w-sm" [(ngModel)]="city"/>
+<app-search-dropdown [city]="city"></app-search-dropdown>
 </div>
