--- a/src/components/search/search/search.component.html
+++ b/src/components/search/search/search.component.html
@@ -1,5 +1,5 @@
-<div className=" p-5 justify-self-center">
+<div class=" p-5 justify-self-center items-center">
 <input type="input" placeholder="Enter City"
-class="border-2 border-blue-400 rounded-md p-1 w-sm" [(ngModel)]="city"/>
+class="align-middle border-4  font-extrabold border-blue-400 rounded-md p-1 w-sm" [(ngModel)]="city"/>
 <app-search-dropdown [city]="city"></app-search-dropdown>
 </div>
