--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="bg-[url('assets/sky.jpg')] h-screen bg-cover bg-center">
 <app-search></app-search>
+<app-displayweather></app-displayweather>
 </div>
