forecast weather added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="bg-[url('assets/sky.jpg')] h-screen bg-cover bg-center">
 <app-search></app-search>
 <app-displayweather></app-displayweather>
+<app-forecast-weather></app-forecast-weather>
 </div>
