--- a/src/components/weather/displayweather/displayweather.component.html
+++ b/src/components/weather/displayweather/displayweather.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="weather">
   <div>
-    <div class=" fixed top-1/5 left-1/4  font-sans p-20 shadow-2xl  w-1/2  rounded-4xl  bg-white/20">
+    <div class=" fixed top-1/5 left-1/4  font-sans p-8 shadow-2xl  w-1/2  rounded-4xl  bg-black/5">
       <!-- <div class='justify-self-end'><TempToggle/></div> -->
 
       <div class="flex flex-row">
@@ -32,19 +32,23 @@
 
         <div class="flex flex-col w-1/2 p-5  text-lg font-medium ">
           <div class="pt-1 p-4 font-semibold text-blue-800">
-            <p> {{`Feels like ${weather.main.feels_like|number:'1.0-0'}`}}</p>
+            <p> {{`Feels like ${weather.main.feels_like|number:'1.0-0'}°C`}}</p>
 
           </div>
           <div class='flex flex-row'>
             <app-icon-display [icon]="faTemperatureArrowUp" [identifier]="''"
-              [value]="weather.main.temp_min+'°C'"  />
+              [value]="`${weather.main.temp_max|number:'1.0-0'}°C`"  />
             <app-icon-display [icon]="faTemperatureArrowDown" [identifier]="''"
-              [value]="weather.main.temp_max+'°C'"  />
+              [value]="`${weather.main.temp_min|number:'1.0-0'}°C`" />
           </div>
-          <app-icon-display [icon]="faWaterIcon" [identifier]="'Humidity'" [value]="weather.main.humidity+' %'" />
-          <app-icon-display [icon]="faWind" [identifier]="'Wind'" [value]="weather.wind.speed +'m/s'" />
-          <app-icon-display [icon]="faCloud" [identifier]="'Cloud'" [value]="weather.clouds.all+' %'"  />
+          <app-icon-display [icon]="faWaterIcon" [identifier]="'Humidity'" [value]="`${weather.main.humidity|number:'1.0-0'} %`" />
+          <app-icon-display [icon]="faWind" [identifier]="'Wind'" [value]="`${weather.wind.speed|number:'1.0-0'} m/s`" />
+          <app-icon-display [icon]="faCloud" [identifier]="'Cloud'" [value]="`${weather.clouds.all |number:'1.0-0'} %`"  />
         </div>
+      </div>
+      <div>
+        <!-- Ai response -->
+         <app-airesponse [weather]="weather"></app-airesponse>
       </div>
     </div>
 
